@@ -7,6 +7,8 @@ rlam - laminate records from multiple files
 [
 .B \-tS
 ][
+.B \-u
+][
 .B \-iaN
 |
 .B \-ifN
@@ -69,6 +71,9 @@ is reset to the empty string.
 .PP
 A hyphen ('-') by itself can be used to indicate the standard
 input, and may appear multiple times.
+The
+.I \-u
+option forces output after each record (i.e., one run through inputs).
 .SH EXAMPLE
 To join files output1 and output2, separated by a comma:
 .IP "" .2i
